# Optimized-Terrain-Mesh

./: CMakeLists.txt  Mesh.cpp  README.md  glad.c  main.cpp
include/: Camera.h  HeightGen.h  Mesh.h  Vertex.h
include/glad/: glad.h
shaders/: fragment.glsl  geometry.glsl  vertex.glsl
